<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="message_welcome_page">Share your Android learning experience at Dicoding, only on Dicoding Story App! Now you can share experiences with other Dicoding friends!</string>
    <string name="title_welcome_page">Welcome to Dicoding Story App!</string>
    <string name="title_signup_page">Please fill in your data first!</string>
    <string name="email">Email</string>
    <string name="judul">Story Title</string>
    <string name="deskripsi">Story Description</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please fill in your data first</string>
    <string name="title_login_page">Share your story here!</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Learning at Dicoding.</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="salah">Password Error</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload Story!</string>
    <string name="adddescription">Enter Description</string>
    <string name="addstory">Add Story</string>
    <string name="empty_image_warning">Please input an image file first.</string>
    <string name="peringatan">Alert!</string>
    <string name="logoutmsg">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="emailwarning">Email is not valid!</string>
    <string name="passwordwarning">The password must not be less than 8 characters!</string>
    <string name="yeah">Yeah!</string>
    <string name="registermessage">The account with %1$s is ready. Come on, share your story only on Dicoding Story.</string>
    <string name="next">Next</string>
    <string name="failedregister">Failed to register, please try again.</string>
    <string name="hintemail">Enter your email</string>
    <string name="hintpassword">Enter your password</string>
    <string name="name_hint">Enter your username</string>
    <string name="invalid_email_format">email salah bang</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Coba lagi</string>
    <string name="include_location">Include Location</string>
</resources>
